--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,9 @@ dependencies:
   crypto: ^3.0.6
   path: ^1.9.0
   ffi: ^2.1.3
+  convert: ^3.1.2
+  hash: ^1.0.4
+  collection: ^1.18.0
 
 dev_dependencies:
   flutter_test:
